; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_dialog.c_DEFDLG_SetDefButton.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_dialog.c_DEFDLG_SetDefButton.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@WM_GETDLGCODE = common dso_local global i32 0, align 4
@DLGC_UNDEFPUSHBUTTON = common dso_local global i32 0, align 4
@DLGC_DEFPUSHBUTTON = common dso_local global i32 0, align 4
@BM_SETSTYLE = common dso_local global i32 0, align 4
@BS_PUSHBUTTON = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@BS_DEFPUSHBUTTON = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.TYPE_3__*, i64)* @DEFDLG_SetDefButton to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DEFDLG_SetDefButton(i64 %0, %struct.TYPE_3__* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store i64 %2, i64* %6, align 8
  store i32 0, i32* %7, align 4
  %9 = load i64, i64* %4, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i64 @GetDlgItem(i64 %9, i32 %12)
  store i64 %13, i64* %8, align 8
  %14 = load i64, i64* %6, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %30

16:                                               ; preds = %3
  %17 = load i64, i64* %6, align 8
  %18 = load i32, i32* @WM_GETDLGCODE, align 4
  %19 = call i32 @SendMessageW(i64 %17, i32 %18, i32 0, i32 0)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* @DLGC_UNDEFPUSHBUTTON, align 4
  %21 = load i32, i32* @DLGC_DEFPUSHBUTTON, align 4
  %22 = or i32 %20, %21
  %23 = and i32 %19, %22
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %30, label %25

25:                                               ; preds = %16
  %26 = load i64, i64* %8, align 8
  store i64 %26, i64* %6, align 8
  %27 = load i64, i64* %6, align 8
  %28 = load i32, i32* @WM_GETDLGCODE, align 4
  %29 = call i32 @SendMessageW(i64 %27, i32 %28, i32 0, i32 0)
  store i32 %29, i32* %7, align 4
  br label %30

30:                                               ; preds = %25, %16, %3
  %31 = load i64, i64* %8, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %40

33:                                               ; preds = %30
  %34 = load i64, i64* %8, align 8
  %35 = load i32, i32* @WM_GETDLGCODE, align 4
  %36 = call i32 @SendMessageW(i64 %34, i32 %35, i32 0, i32 0)
  %37 = load i32, i32* @DLGC_DEFPUSHBUTTON, align 4
  %38 = and i32 %36, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %43, label %40

40:                                               ; preds = %33, %30
  %41 = load i64, i64* %4, align 8
  %42 = call i64 @DEFDLG_FindDefButton(i64 %41)
  store i64 %42, i64* %8, align 8
  br label %43

43:                                               ; preds = %40, %33
  %44 = load i64, i64* %8, align 8
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %56

46:                                               ; preds = %43
  %47 = load i64, i64* %8, align 8
  %48 = load i64, i64* %6, align 8
  %49 = icmp ne i64 %47, %48
  br i1 %49, label %50, label %56

50:                                               ; preds = %46
  %51 = load i64, i64* %8, align 8
  %52 = load i32, i32* @BM_SETSTYLE, align 4
  %53 = load i32, i32* @BS_PUSHBUTTON, align 4
  %54 = load i32, i32* @TRUE, align 4
  %55 = call i32 @SendMessageW(i64 %51, i32 %52, i32 %53, i32 %54)
  br label %56

56:                                               ; preds = %50, %46, %43
  %57 = load i64, i64* %6, align 8
  %58 = icmp ne i64 %57, 0
  br i1 %58, label %59, label %71

59:                                               ; preds = %56
  %60 = load i32, i32* %7, align 4
  %61 = load i32, i32* @DLGC_UNDEFPUSHBUTTON, align 4
  %62 = and i32 %60, %61
  %63 = icmp ne i32 %62, 0
  br i1 %63, label %64, label %70

64:                                               ; preds = %59
  %65 = load i64, i64* %6, align 8
  %66 = load i32, i32* @BM_SETSTYLE, align 4
  %67 = load i32, i32* @BS_DEFPUSHBUTTON, align 4
  %68 = load i32, i32* @TRUE, align 4
  %69 = call i32 @SendMessageW(i64 %65, i32 %66, i32 %67, i32 %68)
  br label %70

70:                                               ; preds = %64, %59
  br label %71

71:                                               ; preds = %70, %56
  %72 = load i32, i32* @TRUE, align 4
  ret i32 %72
}

declare dso_local i64 @GetDlgItem(i64, i32) #1

declare dso_local i32 @SendMessageW(i64, i32, i32, i32) #1

declare dso_local i64 @DEFDLG_FindDefButton(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
